@@ -90,9 +90,7 @@ def initialize_add_dialog(self):
 		i.set_active(False)
 
 	handler = self.Image.set_from_file(image)
-	gutils.garbage(handler)
 	handler = self.am_picture.set_from_pixbuf(self.Image.get_pixbuf())
-	gutils.garbage(handler)
 	self.am_original_title.grab_focus()
 	widgets.connect_add_signals(self)
 
@@ -111,7 +109,6 @@ def add_movie_db(self, close):
 		else:
 			image_path = os.path.join(self.locations['images'], "default.png")
 		handler = self.Image.set_from_file(image_path)
-		gutils.garbage(handler)
 		pixbuf = self.Image.get_pixbuf()
 		self.treemodel.set_value(myiter, 1, \
 			'%004d' % int(self.am_number.get_text()))
@@ -132,7 +129,6 @@ def add_movie_db(self, close):
 		next_number=gutils.find_next_available(self)
 		initialize_add_dialog(self)
 		self.am_number.set_text(str(next_number))
-		gutils.garbage(pixbuf)
 		if close:
 			self.hide_add_movie()
 	else:
@@ -152,7 +148,6 @@ def change_rating_from_slider(self):
 		prefix = "meter"
 	rating_file = "%s/%s0%d.png" % (self.locations['images'], prefix, rating)
 	handler = self.image_add_rating.set_from_pixbuf(gtk.gdk.pixbuf_new_from_file(rating_file))
-	gutils.garbage(handler)
 			
 def populate_with_results(self):
 	m_id = None
@@ -203,22 +198,18 @@ def populate_with_results(self):
 		image = os.path.join(tmp_dest, self.movie.picture)
 		try:
 			handler = self.Image.set_from_file(image)
-			gutils.garbage(handler)
 			pixbuf = self.Image.get_pixbuf()
 			self.am_picture.set_from_pixbuf(pixbuf.scale_simple(100, 140, 3))
 			self.am_picture_name.set_text(string.replace(self.movie.picture, ".jpg",""))
 		except:
 			image = os.path.join(self.locations['images'], "default.png")
 			handler = self.Image.set_from_file(image)
-			gutils.garbage(handler)
 			self.am_picture.set_from_pixbuf(self.Image.get_pixbuf())
 	else:
 		image = os.path.join(self.locations['images'], "default.png")
 		handler = self.Image.set_from_file(image)
-		gutils.garbage(handler)
 		Pixbuf = self.Image.get_pixbuf()
 		self.am_picture.set_from_pixbuf(Pixbuf)
-		gutils.garbage(Pixbuf)
 		
 def show_websearch_results(self):
 	total = self.founded_results_id = 0
@@ -285,15 +276,16 @@ def source_changed(self):
 	# if movie plugin logo exists lets use it
 	if os.path.exists(image):
 		handler = self.am_plugin_image.set_from_pixbuf(gtk.gdk.pixbuf_new_from_file(image))
-		gutils.garbage(handler)
 		
 def clone_movie(self):
 	treeselection = self.main_treeview.get_selection()
 	(tmp_model, tmp_iter) = treeselection.get_selected()	
 	m_id = tmp_model.get_value(tmp_iter, 1)
 	movie_id = self.db.get_value(field="id", table="movies", where="number='%s'"%m_id)
+	
 	if movie_id == None:
 		return false
+		
 	row = self.db.select_movie_by_num(m_id)[0]
 	next_number = gutils.find_next_available(self)
 	new_image = str(row['image']) + '_' + str(next_number)
@@ -342,8 +334,6 @@ def clone_movie(self):
 			INSERT INTO movie_lang('movie_id','lang_id', 'type')
 				VALUES('%s','%s', '%s')""" % \
 			(next_movie_id, item['lang_id'], item['type']))
-
-	myiter = self.treemodel.insert_after(None, self.treemodel.get_iter(next_number-2))
 	tmp_dest = os.path.join(self.griffith_dir, "posters")
 	if str(str(row['image'])) != '':
 		image_path = os.path.join(tmp_dest, str(row['image'])+".jpg")
@@ -352,25 +342,16 @@ def clone_movie(self):
 		shutil.copyfile(image_path, clone_path)
 		image_path = clone_path
 	else:
-		if os.name == 'nt':
+		if self.windows:
 			image_path = "images/default.png"
 		else:
 			image_path = os.path.join(self.locations['images'], "default.png")
 	handler = self.Image.set_from_file(image_path)
-	gutils.garbage(handler)
-	self.treemodel.set_value(myiter, 1, '%004d' % int(next_number))
-	pixbuf = self.Image.get_pixbuf() 
-	pixbuf = pixbuf.scale_simple(30, 40, 'bilinear')
-	self.treemodel.set_value(myiter, 2, pixbuf)
-	self.treemodel.set_value(myiter, 3, str(row['original_title']))
-	self.treemodel.set_value(myiter, 4, str(row['title']))
-	self.treemodel.set_value(myiter, 5, str(row['director']))
-	gutils.garbage(pixbuf)
 		
 	#update statusbar
 	self.total = self.total + 1
 	self.total_filter = self.total
-	self.clear_details()
+	self.count_statusbar()
+	self.populate_treeview(self.db.get_all_data(order_by="number ASC"))
 	self.main_treeview.set_cursor(next_number-1)
 	self.treeview_clicked()
-	self.count_statusbar()
